--- a/termux-x11/src/main/res/values-fr/strings.xml
+++ b/termux-x11/src/main/res/values-fr/strings.xml
@@ -36,7 +36,7 @@
     <string name="open_controller">Ouvrir contrôleur</string>
     <string name="close_controller">Fermer contrôleur</string>
     <string name="progress_manager">Gestionnaire de progression</string>
-    <string name="install_x11_server_bridge">Réinstaller XoDos xinput</string>
+    <string name="install_x11_server_bridge">installer Fix to XoDos</string>
     <string name="stop_desktop">Arrêter le bureau</string>
     <string name="stretch_to_fit_display">Étirer à l\'écran</string>
     <string name="reseed_screen">Redimensionner avec clavier</string>
