--- a/app/src/main/assets/install
+++ b/app/src/main/assets/install
@@ -97,58 +97,9 @@ echo "[*] extracting patches"
 sleep 1
 
 	# Process Symlinks
-	cp -rf /data/data/com.termux/files/usr/bin/xodos /data/data/com.termux/files/xodos-normal
-cp -rf /data/data/com.termux/files/usr/bin/xodosset /data/data/com.termux/files/wineglibc-settings
-cp -rf  /data/data/com.termux/files/usr/bin/xodx /data/data/com.termux/files/xodx-bettergpu
-cp -rf /data/data/com.termux/files/usr/bin/xodxd /data/data/com.termux/files/xodxd-proot
-cp -rf /data/data/com.termux/files/usr/bin/xodset /data/data/com.termux/files/glibc-settings2
-cp -rf /data/data/com.termux/files/usr/bin/xodos-mali /data/data/com.termux/files/xodos-maligpu
-cp -rf  /data/data/com.termux/files/usr/bin/kali /data/data/com.termux/files/kali-kaliroot
-cp -rf  /data/data/com.termux/files/usr/bin/kaliu /data/data/com.termux/files/kaliu-kaliuser
-cp -rf  /data/data/com.termux/files/home/switch /data/data/com.termux/files/switch-container
-cp -f /data/data/com.termux/files/home/switch /data/data/com.termux/files/usr/bin/switch
-cp -rf  /data/data/com.termux/files/usr/bin/xodxx2 /data/data/com.termux/files/XoDos-bionic
-cp -rf  /data/data/com.termux/files/usr/bin/xodxx3 /data/data/com.termux/files/all-drivers-bionic
-cp -rf  /data/data/com.termux/files/usr/bin/xodx3 /data/data/com.termux/files/Zink-GPU
-cp -rf  /data/data/com.termux/files/usr/bin/xodx3 /data/data/com.termux/files/New-fast-GPU
-cp -rf  /data/data/com.termux/files/usr/bin/xodx1 /data/data/com.termux/files/VirGl-gpu
-#cp -rf  /data/data/com.termux/files/usr/bin/nat /data/data/com.termux/files/XoDos-native
-#cp -rf  /data/data/com.termux/files/usr/bin/nat3 /data/data/com.termux/files/all-drivers-native
-cp -rf /data/data/com.termux/files/usr/bin/xodxx /data/data/com.termux/files/XoDos-glibc
-
-sleep 0.5
-chmod +x /data/data/com.termux/files/usr/bin/xodos
-chmod +x /data/data/com.termux/files/usr/bin/xodos-mali
-chmod +x /data/data/com.termux/files/usr/bin/xodxx
-chmod +x /data/data/com.termux/files/usr/bin/xodosset
-chmod +x /data/data/com.termux/files/usr/bin/xodxl
-chmod +x /data/data/com.termux/files/usr/bin/xod
-chmod +x  /data/data/com.termux/files/usr/bin/xodset
-chmod +x /data/data/com.termux/files/usr/bin/xodxd
-chmod +x  /data/data/com.termux/files/usr/etc/bash.bashrc
-chmod +x  /data/data/com.termux/files/home/x11
-chmod +x /data/data/com.termux/files/xodos-normall
-chmod +x /data/data/com.termux/files/XoDos-glibc 
-chmod +x /data/data/com.termux/files/wineglibc-settings
-chmod +x /data/data/com.termux/files/xodx-bettergpu
-chmod +x /data/data/com.termux/files/xodxd-proot
-chmod +x  /data/data/com.termux/files/New-fast-GPU
-chmod +x /data/data/com.termux/files/*
-chmod +x /data/data/com.termux/files/xodos-maligpu
-chmod +x /data/data/com.termux/files/usr/bin/kali
-chmod +x /data/data/com.termux/files/usr/bin/kaliu
-chmod +x /data/data/com.termux/files/usr/bin/switch
-chmod +x /data/data/com.termux/files/switch
-chmod +x /data/data/com.termux/files/usr/bin/xodai
-chmod +x /data/data/com.termux/files/usr/bin/xodaixx
-chmod +x /data/data/com.termux/files/usr/bin/installproot
-chmod +x /data/data/com.termux/files/usr/bin/installkali
+	cp -rf /data/data/com.termux/files/usr/bin/xodos /data/data/com.termux/files/XoDos
 chmod +x /data/data/com.termux/files/usr/bin/fix
-chmod +x /data/data/com.termux/files/XoDos-bionic
- chmod +x /data/data/com.termux/files/Zink-GPU
-chmod +x /data/data/com.termux/files/all-drivers-bionic
-chmod +x /data/data/com.termux/files/usr/bin/fix
-chmod +x /data/data/com.termux/files/home/fix
+chmod +x /data/data/com.termux/files/home/*.deb
 	#cd $PREFIX/../usr2
 	#while read
 	#rm SYMLINKS.txt
